--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ a {
     border-radius: 20px;
     padding: 30px;
     box-sizing: border-box;
+    height: 621px;
 }
 .hebergements h2 {
     margin-bottom: 15px;
@@ -230,15 +231,15 @@ a {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;  
-    row-gap: 10px;   
+    row-gap: 10px;  
+     
 }
 
 .card-link {
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));;
     width: 31%;
     min-width: 120px;
     margin-top: 20px;
-    
   }
 
   .card-link img {
@@ -271,6 +272,7 @@ a {
 /****** Populaires ***********/
 .populaires {
     width: 32%;
+    height: 80%;
 }
 
 .populaires-title {
@@ -313,20 +315,80 @@ a {
     margin-bottom: 5px;
 }
 
+/****** Activités à Marseille ***********/
 .marseille img {
-    
-    height: 50%;
-    
-    
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+    object-fit: cover;
+    height: 370px; 
 }
- 
 
+.marseille-activites {
+    margin-left: 30px;
+    margin-top: 60px;
+}
+
+.marseille-activites h2 {
+    margin-bottom: 30px;
+    font-size: 20px;
+}
+
+#marseille-list .card {
+    width: 23%;
+    padding: 0;
+}
+.marseille h3 {
+    font-size: 15px;
+    margin-left: 18px;
+}
 
 #marseille-list {
     display: flex;
-    flex-direction: row;
-    width: 20%;   
+    flex-direction: row; 
+    column-gap: 25px;  
 }
+
+/****** Footer ***********/
+
+footer{
+    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: row;
+    margin-top: 60px;
+    height: 20%;
+    position: absolute; 
+    width: 87%;
+    
+}
+
+.footer-container {
+    margin-left: 20px;
+    
+}
+footer h5{
+    margin-bottom: auto;
+    font-size: 15px;
+    
+}
+footer ul {
+    padding: 0;
+    
+}
+footer li{
+    margin-bottom: 13px;
+    font-size: 12px;
+    list-style-type: none;
+
+}
+
+.nos-hebergements {
+  margin-left: 260px;
+}
+
+.assistance {
+    margin-left: 260px;
+}
+
 
 
 
