--- a/css/style.css
+++ b/css/style.css
@@ -39,29 +39,33 @@ a {
 .booki {
     display: flex;
     align-items: center;
-    width: 100%;
-    padding-left: 10px;
+    width: 100%; 
 }
 
 .logo {
     width: 15%;
+    padding-left: 10px;
 }
 
 nav {
+    position: relative;
     width: 100%;
 }
-
+  
 nav ul {
     display: flex;
     justify-content: flex-end;
     list-style-type: none;
-    gap: 60px; 
+    gap: 60px;
 }
 
-.logement:hover, 
-.activites:hover {
-    color: var(--main-color) ;
-    border-top: 3px solid var(--main-color) ;
+.navbar li {
+    list-style: none; 
+}
+  
+.lien-header:hover {
+    color: var(--main-color);
+    border-top: 3px solid var(--main-color);
     padding-top: 20px;
 }
 
@@ -74,11 +78,12 @@ nav ul {
 #searchForm h1 {
     margin-bottom: 5px;
     font-size: 19px;
+    margin-top: 30px;
 }
 
 #searchForm p {
     font-size: 13px;
-    margin-bottom: 20px;  
+    margin-bottom: 25px;  
 }
 
 #city::placeholder {
@@ -117,7 +122,7 @@ nav ul {
 .result {
     display: flex;
     flex-direction: row;
-    margin-bottom: 8px;
+    margin-bottom: 20px;
 }
 
 .hidden-desktop {
@@ -161,7 +166,7 @@ nav ul {
     align-items: center;
     gap: 10px;
     margin-top: 15px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 .info .fa-info {
@@ -229,8 +234,7 @@ nav ul {
     width: 65%;
     border-radius: 20px;
     padding: 30px;
-    box-sizing: border-box;
-    height: 621px;   
+    box-sizing: border-box;  
 }
 
 .hebergements h2 {
@@ -243,6 +247,11 @@ nav ul {
     flex-direction: row;
     justify-content: space-between;  
     row-gap: 10px;    
+}
+
+#hebergement .card {
+    height: 200px;
+    width: 100%;
 }
 
 .card-link {
@@ -260,13 +269,15 @@ nav ul {
 }
   
 .card-content-hotel{
-    padding: 16px;
+    padding-top: 16px;
+    padding-left: 14px;
 }
   
 .card-title-hotel {
     margin: 0;
-    font-size: 15px;
+    font-size: 14px;
     margin-top: -15px;
+    white-space: nowrap;
 }
   
 .card-subtitle-hotel {
@@ -283,7 +294,6 @@ nav ul {
 
 .populaires {
     width: 32%;
-    height: 80%;
 }
 
 .populaires-title {
@@ -332,17 +342,17 @@ nav ul {
     border-radius: 20px 20px 0 0;
     width: 100%;
     object-fit: cover;
-    height: 370px; 
+    height: 400px; 
 }
 
-
 .marseille-activites {
-    margin-left: 30px;
-    margin-top: 60px;
+    margin-left: 25px;
+    margin-top: 80px;
+    margin-right: auto;
 }
 
 .marseille-activites h2 {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     font-size: 20px;
 }
 
@@ -371,7 +381,7 @@ footer{
     flex-direction: row;
     background-color: var(--main-bg-color);
     padding: 1px 15px;
-    margin-top: 70px;
+    margin-top: 82px;
     height: 10%;
 }
 
@@ -381,7 +391,8 @@ footer{
 
 footer h5{
     margin-bottom: auto;
-    font-size: 15px;  
+    font-size: 15px; 
+    white-space: nowrap; 
 }
 
 footer ul {
@@ -389,6 +400,7 @@ footer ul {
     line-height: 30px;
     list-style-type: none;
     font-size: 12px;
+    white-space: nowrap;
 }
 
 .nos-hebergements {
@@ -401,285 +413,4 @@ footer ul {
 
 footer a:hover {
     text-decoration: underline;
-}
-
-
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
-    /* ... */
-    
-    body {
-        margin: 0;
-    }
-    
-    .main-container  {
-        padding: 0;
-    }
-    
-    input.hidden-mobile {
-        display: none;
-    }
-
-    input.hidden-desktop {
-        display: none;
-    }
-    
-    /****** HEADER SMARTPHONE ***********/
-    
-    header {
-        flex-direction: column;  
-    }
-    
-    .logo {
-        padding-top: 25px;
-        margin-bottom: 15px;
-    }
-
-    .booki {
-        text-align: center;
-    }
-    
-    .navbar {
-        width: 100%;
-        text-align: left; 
-    }
-    
-    nav ul {
-        padding-left: 0;
-    }
-    
-    nav {
-        width: 100%;
-        height: 36px;
-        align-items: center;
-        border-bottom: 3px solid var(--main-bg-color);
-        padding-bottom: 10px;
-        margin-left: 0;   
-    }
-    
-    nav li {
-        width: 50%;
-        text-align: center;  
-    }
-    
-    .navbar a:hover {
-        border-top: none;
-        border-bottom: 3px solid var(--main-color);
-        padding-bottom: 10px;     
-    }
-    
-    /****** BARRE DE RECHERCHE SMARTPHONE ***********/
-      
-    #searchForm {
-        padding-left: 20px;
-        padding-right: 20px;
-        margin-bottom: 20px;
-    }
-
-    h1 {
-        padding-top: 20px;
-    }
-
-    #searchForm .result {
-        width: 100%;
-        margin-right: 20px;
-        margin-top: 40px;
-    }
-    
-    #searchForm .result #city {
-        width: 100%;
-        border-right: none;
-    } 
-      
-    .map-icon {
-        padding: 16px;
-        font-size: 16px;
-        border-radius: 15px 0 0 15px;
-        width:10%;  
-    }
-
-    #city {
-        border-top: 1px solid var(--main-bg-color);
-        border-bottom: 1px solid var(--main-bg-color);
-    }
-
-    .hidden-desktop {
-        display: flex;
-        border: none;
-        border-radius: 15px 15px;
-        background-color: var(--main-color);
-        color: white;
-        padding: 13px 15px;
-        box-shadow: 0px 5px 5px #D9D9D9;
-        margin-left: -10px;
-        position: relative;
-        font-size: 17px;
-        cursor: pointer;
-    }
-    
-      /****** FILTRES SMARTPHONE ***********/
-    
-    .filter span, .info {
-        padding-left: 20px;
-        padding-right: 20px
-    }
-
-    .filter {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 20px;   
-    }
-
-    .filter span {
-        display: block;
-        width: 100%;
-        padding-bottom: 15px;
-    }
-
-    .filter button {
-        padding: 10px 12px;
-    }
-    
-    .bouton {
-        margin-left: 10px;
-        margin-top: -5px;
-        font-size: 5px;
-    }
-    
-    .info .fa-info {
-        font-size: 12px; 
-        padding: 7px 11px 14px 11px; 
-    }
-
-    .info {
-        margin-bottom: 50px;
-    }
-    
-
-     /****** LES PLUS POPULAIRES SMARTPHONE ***********/
-
-    .hebergements-and-populaires {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: space-between;
-        margin-top: -50px;  
-    }
-    
-    .hebergements-and-populaires section {
-        border-radius: 20px;
-        padding: 30px;
-        box-sizing: border-box;
-        margin-bottom: 15px;
-    }
-
-    .populaires-cards {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        border-radius: 0px; 
-    }
-
-    .populaires {
-        width: 100%;
-    }
-    
-    .populaires-cards .card-title {
-        font-size: 15px;
-    }
-    
-    .populaires-cards a {
-        width: 100%;
-        margin-bottom: -13px;
-    }
-
-    /****** HEBERGEMENTS A MARSEILLE SMARTPHONE ***********/
-
-    .hebergements-and-populaires #hebergement {
-        background-color: transparent; 
-        border-radius: 20px;
-        padding: 30px;
-        box-sizing: border-box;
-    }
-
-    .hebergements {
-        width: 100%;
-        height: 1600px;
-        padding: 0; 
-    }
-
-    #hebergements {
-        display: flex;
-        flex-direction: column; /* Changer la direction en colonne */
-        align-items: center; 
-    }
-
-    .card-link {
-        width: 100%; /* Faire en sorte que les liens de carte prennent toute la largeur */
-        margin-top: 20px; 
-        margin-bottom: -13px;
-    }
-
-    #hebergements .card-link img {
-        height: 120px;
-    }
-
-    .card-link img {
-        object-fit: cover;
-    }
-
-    #hebergement h4 {
-        margin-top: 30px;
-    }
-
-    
-    /****** ACTIVITES A MARSEILLE SMARTPHONE ***********/
-
-    #marseille-list {
-        display: flex;
-        flex-direction: column;   
-    }
-
-    #marseille-list .card {
-        width: 100%;
-        margin-bottom: 20px;
-        height: 180px;
-    }
-    
-    .marseille-activites {
-        padding-left: 0;
-        margin-left: 30px;
-        margin-right: 30px;
-        margin-bottom: 5px;
-        margin-top: -5px;
-    }
-
-    #marseille-list .marseille img {
-        height: 120px;
-    }
-
-    /****** FOOTER SMARTPHONE ***********/
-
-    footer {
-        display: flex;
-        flex-direction: column;
-        height: 10%;  
-    }
-   
-    .footer-container  {
-        margin-left: 20px;
-    }
-    
-    footer ul {
-        font-size: 10px;
-        line-height: 23px;
-    }
-
-    footer h5 {
-        font-size: 12px;
-    }
-    
-    .nos-hebergements, .assistance {
-        margin-left: 0;
-    }
-    
 }
