--- a/css/mobile.css
+++ b/css/mobile.css
@@ -192,7 +192,7 @@
 
     .hebergements {
         width: 100%;
-        height: 1600px;
+        height: 1540px;
         padding: 0;
     }
 
@@ -243,6 +243,9 @@
         margin-right: 30px;
         margin-bottom: 5px;
         margin-top: -5px;
+    }
+    .marseille-activites h2 {
+        margin-bottom: 35px;
     }
 
     #marseille-list .marseille img {
